[RFT] Refator the logic of setting genres for movie when get popular movies